2. Arreglado nombre erroneo de recetas-form y agregado validaciones por html en el formulario.

--- a/src/app/recetas/recetas.html
+++ b/src/app/recetas/recetas.html
@@ -24,4 +24,4 @@
         </div>
     }
 </div>
-<app-receta-from [recetas]="recetas"></app-receta-from>
+<app-receta-form [recetas]="recetas"></app-receta-form>
