4. Cambiado contenido h2 del formulario.

--- a/src/app/receta-form/receta-form.html
+++ b/src/app/receta-form/receta-form.html
@@ -1,4 +1,4 @@
-<h2>Vamos a añadir más recetas</h2>
+<h2>Formulario para agregar más recetas a la lista</h2>
 <form [formGroup]="recetaForm" class="form bg-secondary text-light" id="form">
   <label class="form-label fs-3">Nombre Receta</label>
   <input class="form-control" type="text" id="nombreReceta" name="nombreReceta" placeholder="Langostinos" formControlName="titulo" required>
