--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -7,10 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#receta">Recipes</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#form">Form</a>
+          <a class="nav-link active" aria-current="page" routerLink="recetas">Recetas</a>
         </li>
       </ul>
     </div>
